# themisai

./: LICENSE  Makefile  README.md  current-work.txt  docker-compose.yml  project.txt  pyproject.toml  requirements-dev.txt  requirements.txt
 ui/: index.html
backend/: main.py
backend/app/api/: deps.py
backend/app/core/: component_manager.py  config_watcher.py  database.py  exceptions.py  ollama_client.py  resource_monitor.py  websocket_manager.py
backend/app/processors/: document_processor.py  embedding_processor.py  pdf_processor.py  relationship_extractor.py  text_processor.py
backend/app/services/: case_service.py  config_service.py  document_service.py  embedding_service.py  notification_service.py  search_service.py
backend/app/tasks/: document_tasks.py  relationship_tasks.py
backend/config/: base_config.json  development_config.json  runtime_config.json  settings.py
config/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.override.yml
config/monitoring/: prometheus.yml
config/nginx/: nginx.conf
docs/: architecture-code.md  architecture.md  components.md  high-level-architecture.md  project-summary.md  summary.md  technology-stack.md
frontend/: main.py
frontend/assets/: scripts.js  styles.css
frontend/components/: admin_panel.py  document_viewer.py  progress_tracker.py  search_pane.py  sidebar.py
frontend/utils/: api_client.py  ui_helpers.py  websocket_client.py
scripts/: backup_data.py  init_databases.py  performance_test.py  pull_models.py  setup_environment.py
tests/: test_domain_models.py
(+29 files in other folders)
